# vfx

./: .gitignore  LICENSE  README.md  build.gradle  index.html  package.json  pnpm-lock.yaml  settings.gradle  tsconfig.json  vite.config.ts
misc/: gen-exports.py
scripts/: copy-resources.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  robot.rs
src-ts/: TS_ONLY_FILES.md  TS_ONLY_FILES_ZH.md  tsconfig.json
src-ts/src/: bootstrap-utils.ts  child.ts  index.ts
src-ts/src/animation/: AnimationApplyFunction.ts  AnimationEdge.ts  AnimationGraph.ts  AnimationGraphBuilder.ts  AnimationInterrupted.ts  AnimationNode.ts  AnimationStateTransferBeginCallback.ts  AnimationStateTransferFinishCallback.ts  DoubleDoubleFunction.ts
src-ts/src/commons-graph/: Graph.ts
src-ts/src/entity/: Point.ts  Rect.ts
src-ts/src/intro/: DemoVScene.ts  IntroFXMain.ts  IntroMain.ts  IntroTheme.ts  sceneHelpers.ts  scenesDemo.ts  scenesText.ts
src-ts/src/javafx/: CheckBox.ts  GridPane.ts  HBox.ts  ImageView.ts  Label.ts  Node.ts  Pane.ts  Parent.ts  Property.ts  TextField.ts  VBox.ts  color.ts  layout.ts  scene.ts  shapes.ts  stage.ts
src-ts/src/robot/: RobotWrapper.ts
src-ts/src/theme/: Theme.ts  ThemeFontProvider.ts
src-ts/src/util/: FXUtils.ts  JavaFXNode.ts  JavaFXRegion.ts  MiscUtils.ts  types.ts
src-ts/src/vproxy-base/: Callback.ts  LogType.ts  Logger.ts  OS.ts
src-ts/src/window/: StageSpec.ts  WindowHandle.ts  WindowManager.ts  childComms.ts  events.ts  factory.ts
(+633 files in other folders)
